# speech-api

./: README.md  pyproject.toml  verify_endpoints.py
src/: config.py  main.py
src/neuttsair/: neutts.py
src/routes/: speech.py
src/services/: stt.py  tts.py
src/speech_api/: __init__.py
